--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </header>
 
     <section class="hero">
-      <div class="container container-hero h-full flex items-center justify-between">
+      <div class="container container-hero h-full flex items-center justify-between relative">
         <div class="flex flex-col gap-6 lg:max-w-xl max-lg:absolute content-hero max-md:p-4 max-lg:p-6">
           <div class="flex items-center gap-3">
             <img
@@ -81,7 +81,7 @@
 
         <div class="w-full h-full flex justify-end relative container-hero">
           <img
-            class="w-full moca-w-hero max-lg:-translate-y-1/2 max-lg:top-1/3 lg:bottom-0 left-1/2 -translate-x-1/2 absolute"
+            class="w-full moca-w-hero bottom-0 left-1/2 -translate-x-1/2 absolute"
             src="./public/moca-hero.png"
             alt="cabelo"
           />
