--- a/index.html
+++ b/index.html
@@ -58,9 +58,13 @@
     </header>
 
     <section class="hero">
-      <div class="container container-hero h-full flex items-center justify-between relative">
-        <div class="flex flex-col gap-6 lg:max-w-xl max-lg:absolute content-hero max-md:p-4 max-lg:p-6">
-          <div class="flex items-center gap-3">
+      <div
+        class="container container-hero h-full flex items-center justify-between relative"
+      >
+        <div
+          class="flex flex-col gap-6 lg:max-w-xl max-lg:absolute content-hero max-md:p-4 max-lg:p-6"
+        >
+          <div class="flex items-center gap-3 max-lg:hidden">
             <img
               class="block max-w-32 w-full"
               src="./public/avaliacoes-fotos.png"
@@ -68,7 +72,10 @@
             />
             <p class="text-sm">+7 mil mulheres renovaram seus cabelos</p>
           </div>
-          <h2 class="text-2xl text-center lg:text-left lg:text-5xl leading-tight font-semibold" style="color: #2a1309">
+          <h2
+            class="text-2xl text-center lg:text-left lg:text-5xl leading-tight font-semibold"
+            style="color: #2a1309"
+          >
             Diga adeus à queda e ao enfraquecimento!
           </h2>
           <p class="text-base text-center lg:text-left">
@@ -76,12 +83,22 @@
             desejam cabelos mais fortes, longos e radiantes — de dentro para
             fora.
           </p>
-          <a href="#" class="button max-lg:w-full max-lg:text-center">Cabelos mais fortes agora</a>
+          <a href="#" class="button max-lg:w-full max-lg:text-center"
+            >Cabelos mais fortes agora</a
+          >
+          <div class="flex items-center flex-col gap-2 lg:hidden">
+            <img
+              class="block max-w-48 w-full"
+              src="./public/avaliacoes-fotos.png"
+              alt="+7 mil mulheres renovaram seus cabelos"
+            />
+            <p class="text-sm">+7 mil mulheres renovaram seus cabelos</p>
+          </div>
         </div>
 
         <div class="w-full h-full flex justify-end relative container-hero">
           <img
-            class="w-full moca-w-hero bottom-0 left-1/2 -translate-x-1/2 absolute"
+            class="w-full moca-w-hero max-lg:-translate-y-1/2 max-lg:top-1/3 lg:bottom-0 left-1/2 -translate-x-1/2 absolute"
             src="./public/moca-hero.png"
             alt="cabelo"
           />
@@ -110,7 +127,9 @@
             class="hidden lg:flex flex-col absolute bottom-10 right-0 gap-6 items-center justify-center w-fit h-fit container-metric-item-hero"
           >
             <div class="flex items-center justify-center gap-4">
-              <p class="leading-none text-base font-bold">Mulheres que recomendam</p>
+              <p class="leading-none text-base font-bold">
+                Mulheres que recomendam
+              </p>
 
               <svg
                 width="8"
@@ -126,9 +145,13 @@
               </svg>
             </div>
 
-            <img class="max-w-60" src="./public/mulheres-recomendam.png" alt="mulheres que recomendam" />
+            <img
+              class="max-w-60"
+              src="./public/mulheres-recomendam.png"
+              alt="mulheres que recomendam"
+            />
 
-            <a href="#" class="button-item-hero ">Ver testemunhos</a>
+            <a href="#" class="button-item-hero">Ver testemunhos</a>
           </div>
         </div>
       </div>
