--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         class="container container-hero h-full flex items-center justify-between relative"
       >
         <div
-          class="flex flex-col gap-6 lg:max-w-xl max-lg:absolute content-hero max-md:p-4 max-lg:p-6"
+          class="flex flex-col gap-4 md:gap-6 lg:max-w-xl max-lg:absolute content-hero max-md:p-4 max-lg:p-6"
         >
           <div class="flex items-center gap-3 max-lg:hidden">
             <img
@@ -98,7 +98,7 @@
 
         <div class="w-full h-full flex justify-end relative container-hero">
           <img
-            class="w-full moca-w-hero max-lg:-translate-y-1/2 max-lg:top-1/3 lg:bottom-0 left-1/2 -translate-x-1/2 absolute"
+            class="w-full moca-w-hero max-md:!max-w-80 max-lg:-translate-y-1/2 max-lg:top-1/3 lg:bottom-0 left-1/2 -translate-x-1/2 absolute"
             src="./public/moca-hero.png"
             alt="cabelo"
           />
@@ -146,7 +146,7 @@
             </div>
 
             <img
-              class="max-w-60"
+              class="max-w-40"
               src="./public/mulheres-recomendam.png"
               alt="mulheres que recomendam"
             />
