feat: adiciona as novas sessões

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
       </header>
 
-      <section class="hero max-md:py-12 snap-center min-h-screen">
+      <section class="hero max-md:pb-20 snap-center min-h-screen">
         <div
           class="container container-hero h-full flex items-center justify-between relative"
         >
@@ -160,7 +160,7 @@
 
       <section class="snap-center min-h-screen">
         <div
-          class="container min-h-screen !py-10 md:!py-20 grid grid-cols-1 lg:grid-cols-[auto_1fr] gap-12"
+          class="container min-h-screen !py-12 md:!py-20 grid grid-cols-1 lg:grid-cols-[auto_1fr] gap-12"
         >
           <img
             class="h-full max-lg:h-96 max-lg:w-full object-cover rounded-2xl"
@@ -238,7 +238,7 @@
 
       <section class="relative snap-center h-screen">
         <div
-          class="container h-screen flex flex-col gap-6 md:gap-8 items-center justify-center"
+          class="container h-screen !py-12 flex flex-col gap-6 md:gap-8 items-center justify-center"
         >
           <h2
             class="text-3xl md:text-5xl text-center max-w-[945px] leading-tight"
@@ -278,7 +278,7 @@
           class="grid grid-cols-1 lg:grid-cols-2 gap-0 items-stretch min-h-screen p-0"
         >
           <div
-            class="flex flex-col gap-6 max-lg:order-2 justify-center px-6 py-6 lg:px-16 lg:py-0 bg-[#151515] h-full lg:min-h-screen"
+            class="flex flex-col gap-6 max-lg:order-2 justify-center px-6 py-12 lg:px-16 lg:py-0 bg-[#151515] h-full lg:min-h-screen"
           >
             <h2 class="font-bold text-5xl max-lg:text-2xl">
               Travamento invisível
@@ -356,199 +356,7 @@
             </ul>
           </div>
           <div
-            class="relative max-lg:order-1 h-72 lg:h-auto lg:min-h-screen w-full"
-          >
-            <img
-              src="./public/tratamento-invisivel.png"
-              alt="Mulher preocupada com a pele e cabelo"
-              class="absolute inset-0 w-full h-full object-cover rounded-none lg:rounded-none"
-            />
-          </div>
-        </div>
-      </section>
-
-      <section
-        class="snap-center min-h-screen bg-[#151515] text-white flex flex-col justify-center max-w-[1640px] mx-auto"
-      >
-        <div
-          class="grid grid-cols-1 lg:grid-cols-2 gap-0 items-stretch min-h-screen p-0"
-        >
-          <div
-            class="flex flex-col gap-6 max-lg:order-2 justify-center px-6 py-6 lg:px-16 lg:py-0 bg-[#151515] h-full lg:min-h-screen"
-          >
-            <h2 class="font-bold text-5xl max-lg:text-2xl">
-              Travamento invisível
-            </h2>
-            <p class="text-base md:text-lg text-[#F2F2F2]">
-              Com o tempo, nossas células entram em um estado de inatividade
-              estética.
-            </p>
-            <p class="text-base md:text-lg text-[#F2F2F2]">
-              Isso impede a produção de colágeno, a renovação capilar e a
-              vitalidade da pele, travando sua beleza natural.
-            </p>
-            <ul class="flex flex-col gap-3">
-              <li class="flex items-center gap-2">
-                <span
-                  class="inline-flex items-center justify-center w-6 h-6 rounded-full"
-                >
-                  <svg
-                    width="22"
-                    height="22"
-                    viewBox="0 0 22 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M11 21C16.5228 21 21 16.5228 21 11C21 5.47715 16.5228 1 11 1C5.47715 1 1 5.47715 1 11C1 16.5228 5.47715 21 11 21Z"
-                      fill="#D1D5DB"
-                    />
-                    <path d="M14 8L8 14L14 8Z" fill="#D1D5DB" />
-                    <path d="M8 8L14 14L8 8Z" fill="#D1D5DB" />
-                    <path
-                      d="M14 8L8 14M8 8L14 14M21 11C21 16.5228 16.5228 21 11 21C5.47715 21 1 16.5228 1 11C1 5.47715 5.47715 1 11 1C16.5228 1 21 5.47715 21 11Z"
-                      stroke="#FF0000"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </span>
-                <span class="text-base text-[#F2F2F2]"
-                  >Cabelo ralo, queda constante, unhas fracas e pele sem
-                  viço</span
-                >
-              </li>
-              <li class="flex items-center gap-2">
-                <span
-                  class="inline-flex items-center justify-center w-6 h-6 rounded-full"
-                >
-                  <svg
-                    width="22"
-                    height="22"
-                    viewBox="0 0 22 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M11 21C16.5228 21 21 16.5228 21 11C21 5.47715 16.5228 1 11 1C5.47715 1 1 5.47715 1 11C1 16.5228 5.47715 21 11 21Z"
-                      fill="#D1D5DB"
-                    />
-                    <path d="M14 8L8 14L14 8Z" fill="#D1D5DB" />
-                    <path d="M8 8L14 14L8 8Z" fill="#D1D5DB" />
-                    <path
-                      d="M14 8L8 14M8 8L14 14M21 11C21 16.5228 16.5228 21 11 21C5.47715 21 1 16.5228 1 11C1 5.47715 5.47715 1 11 1C16.5228 1 21 5.47715 21 11Z"
-                      stroke="#FF0000"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </span>
-                <span class="text-base text-[#F2F2F2]"
-                  >Aparência cansada e envelhecimento precoce</span
-                >
-              </li>
-            </ul>
-          </div>
-          <div
-            class="relative max-lg:order-1 h-72 lg:h-auto lg:min-h-screen w-full"
-          >
-            <img
-              src="./public/tratamento-invisivel.png"
-              alt="Mulher preocupada com a pele e cabelo"
-              class="absolute inset-0 w-full h-full object-cover rounded-none lg:rounded-none"
-            />
-          </div>
-        </div>
-      </section>
-
-      <section
-        class="snap-center min-h-screen bg-[#151515] text-white flex flex-col justify-center max-w-[1640px] mx-auto"
-      >
-        <div
-          class="grid grid-cols-1 lg:grid-cols-2 gap-0 items-stretch min-h-screen p-0"
-        >
-          <div
-            class="flex flex-col gap-6 max-lg:order-2 justify-center px-6 py-6 lg:px-16 lg:py-0 bg-[#151515] h-full lg:min-h-screen"
-          >
-            <h2 class="font-bold text-5xl max-lg:text-2xl">
-              Travamento invisível
-            </h2>
-            <p class="text-base md:text-lg text-[#F2F2F2]">
-              Com o tempo, nossas células entram em um estado de inatividade
-              estética.
-            </p>
-            <p class="text-base md:text-lg text-[#F2F2F2]">
-              Isso impede a produção de colágeno, a renovação capilar e a
-              vitalidade da pele, travando sua beleza natural.
-            </p>
-            <ul class="flex flex-col gap-3">
-              <li class="flex items-center gap-2">
-                <span
-                  class="inline-flex items-center justify-center w-6 h-6 rounded-full"
-                >
-                  <svg
-                    width="22"
-                    height="22"
-                    viewBox="0 0 22 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M11 21C16.5228 21 21 16.5228 21 11C21 5.47715 16.5228 1 11 1C5.47715 1 1 5.47715 1 11C1 16.5228 5.47715 21 11 21Z"
-                      fill="#D1D5DB"
-                    />
-                    <path d="M14 8L8 14L14 8Z" fill="#D1D5DB" />
-                    <path d="M8 8L14 14L8 8Z" fill="#D1D5DB" />
-                    <path
-                      d="M14 8L8 14M8 8L14 14M21 11C21 16.5228 16.5228 21 11 21C5.47715 21 1 16.5228 1 11C1 5.47715 5.47715 1 11 1C16.5228 1 21 5.47715 21 11Z"
-                      stroke="#FF0000"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </span>
-                <span class="text-base text-[#F2F2F2]"
-                  >Cabelo ralo, queda constante, unhas fracas e pele sem
-                  viço</span
-                >
-              </li>
-              <li class="flex items-center gap-2">
-                <span
-                  class="inline-flex items-center justify-center w-6 h-6 rounded-full"
-                >
-                  <svg
-                    width="22"
-                    height="22"
-                    viewBox="0 0 22 22"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M11 21C16.5228 21 21 16.5228 21 11C21 5.47715 16.5228 1 11 1C5.47715 1 1 5.47715 1 11C1 16.5228 5.47715 21 11 21Z"
-                      fill="#D1D5DB"
-                    />
-                    <path d="M14 8L8 14L14 8Z" fill="#D1D5DB" />
-                    <path d="M8 8L14 14L8 8Z" fill="#D1D5DB" />
-                    <path
-                      d="M14 8L8 14M8 8L14 14M21 11C21 16.5228 16.5228 21 11 21C5.47715 21 1 16.5228 1 11C1 5.47715 5.47715 1 11 1C16.5228 1 21 5.47715 21 11Z"
-                      stroke="#FF0000"
-                      stroke-width="2"
-                      stroke-linecap="round"
-                      stroke-linejoin="round"
-                    />
-                  </svg>
-                </span>
-                <span class="text-base text-[#F2F2F2]"
-                  >Aparência cansada e envelhecimento precoce</span
-                >
-              </li>
-            </ul>
-          </div>
-          <div
-            class="relative max-lg:order-1 h-72 lg:h-auto lg:min-h-screen w-full"
+            class="relative max-lg:order-1 h-50vh lg:h-auto lg:min-h-screen w-full"
           >
             <img
               src="./public/tratamento-invisivel.png"
