feat: sobe os links

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
               desejam cabelos mais fortes, longos e radiantes — de dentro para
               fora.
             </p>
-            <a href="#" class="button max-lg:w-full max-lg:text-center"
+            <a href="#ritual" class="button max-lg:w-full max-lg:text-center"
               >Cabelos mais fortes agora</a
             >
             <div class="flex items-center flex-col gap-2 lg:hidden">
@@ -188,7 +188,7 @@
                 alt="mulheres que recomendam"
               />
 
-              <a href="#" class="button-item-hero">Ver testemunhos</a>
+              <a href="#testemunhos" class="button-item-hero">Ver testemunhos</a>
             </div>
           </div>
         </div>
@@ -833,7 +833,7 @@
           <div
             class="flex gap-4 items-center justify-center max-md:flex-col max-md:w-full"
           >
-            <a class="button block text-center max-md:!w-full" href="#"
+            <a class="button block text-center max-md:!w-full" href="#ritual"
               >GARANTIR OFERTA</a
             >
             <a
@@ -870,6 +870,7 @@
 
       <section
         class="snap-start min-h-screen flex flex-col items-center justify-center bg-white py-12 md:py-20"
+        id="testemunhos"
       >
         <div class="container flex flex-col items-center justify-center py-12">
           <h2 class="text-2xl md:text-4xl text-center leading-140 mb-10">
@@ -1274,6 +1275,7 @@
 
       <section
         class="snap-start min-h-screen flex flex-col items-center justify-center bg-white py-12 md:py-20"
+        id="ritual"
       >
         <div class="container">
           <div class="mx-auto">
@@ -1421,7 +1423,7 @@
                     </p>
                   </div>
 
-                  <a href="#" class="button block mx-auto">GARANTIR OFERTA</a>
+                  <a href="#ritual" class="button block mx-auto">GARANTIR OFERTA</a>
 
                   <p class="text-xs text-[#999999] font-semibold text-center">
                     Compra 100% segura • Satisfação garantida
@@ -1611,7 +1613,7 @@
                     </p>
                   </div>
 
-                  <a href="#" class="button block mx-auto">GARANTIR OFERTA</a>
+                  <a href="#ritual" class="button block mx-auto">GARANTIR OFERTA</a>
 
                   <p class="text-xs text-[#999999] font-semibold text-center">
                     Compra 100% segura • Satisfação garantida
@@ -1740,7 +1742,7 @@
                     </p>
                   </div>
 
-                  <a href="#" class="button block mx-auto">GARANTIR OFERTA</a>
+                  <a href="#ritual" class="button block mx-auto">GARANTIR OFERTA</a>
 
                   <p class="text-xs text-[#999999] font-semibold text-center">
                     Compra 100% segura • Satisfação garantida
@@ -1768,7 +1770,7 @@
               único que nutre simultaneamente cabelo, pele e unhas, entregando
               resultados visíveis em poucos dias.
             </p>
-            <a href="#" class="button text-center inline-block mb-4 md:mb-6"
+            <a href="#ritual" class="button text-center inline-block mb-4 md:mb-6"
               >GARANTIR OFERTA</a
             >
 
@@ -3272,7 +3274,7 @@
                   dias. Sua beleza, reativada naturalmente com a potência do HSN
                   Complex™.
                 </p>
-                <a href="#" class="button !w-full text-center"
+                <a href="#ritual" class="button !w-full text-center"
                   >GARANTIR OFERTA</a
                 >
               </div>
