--- a/index-animada.html
+++ b/index-animada.html
@@ -236,7 +236,7 @@
               desejam cabelos mais fortes, longos e radiantes — de dentro para
               fora.
             </p>
-            <a href="#" class="button max-lg:w-full max-lg:text-center"
+            <a href="#ritual" class="button max-lg:w-full max-lg:text-center"
               >Cabelos mais fortes agora</a
             >
             <div class="flex items-center flex-col gap-2 lg:hidden">
@@ -306,7 +306,7 @@
                 alt="mulheres que recomendam"
               />
 
-              <a href="#" class="button-item-hero">Ver testemunhos</a>
+              <a href="#testemunhos" class="button-item-hero">Ver testemunhos</a>
             </div>
           </div>
         </div>
@@ -954,7 +954,7 @@
           <div
             class="flex gap-4 items-center justify-center max-md:flex-col max-md:w-full"
           >
-            <a class="button block text-center max-md:!w-full" href="#"
+            <a class="button block text-center max-md:!w-full" href="#ritual"
               >GARANTIR OFERTA</a
             >
             <a
@@ -994,6 +994,7 @@
 
       <section
         class="snap-start min-h-screen flex flex-col items-center justify-center bg-white py-12 md:py-28"
+        id="testemunhos"
       >
         <div class="container flex flex-col items-center justify-center py-12">
           <h2 class="text-2xl md:text-4xl text-center leading-140 mb-10">
@@ -1398,6 +1399,7 @@
 
       <section
         class="snap-start min-h-screen flex flex-col items-center justify-center bg-white py-12 md:py-28"
+        id="ritual"
       >
         <div class="container">
           <div class="mx-auto">
@@ -1545,7 +1547,7 @@
                     </p>
                   </div>
 
-                  <a href="#" class="button block mx-auto">GARANTIR OFERTA</a>
+                  <a href="#ritual" class="button block mx-auto">GARANTIR OFERTA</a>
 
                   <p class="text-xs text-[#999999] font-semibold text-center">
                     Compra 100% segura • Satisfação garantida
@@ -1735,7 +1737,7 @@
                     </p>
                   </div>
 
-                  <a href="#" class="button block mx-auto">GARANTIR OFERTA</a>
+                  <a href="#ritual" class="button block mx-auto">GARANTIR OFERTA</a>
 
                   <p class="text-xs text-[#999999] font-semibold text-center">
                     Compra 100% segura • Satisfação garantida
@@ -1864,7 +1866,7 @@
                     </p>
                   </div>
 
-                  <a href="#" class="button block mx-auto">GARANTIR OFERTA</a>
+                  <a href="#ritual" class="button block mx-auto">GARANTIR OFERTA</a>
 
                   <p class="text-xs text-[#999999] font-semibold text-center">
                     Compra 100% segura • Satisfação garantida
@@ -1892,7 +1894,7 @@
               único que nutre simultaneamente cabelo, pele e unhas, entregando
               resultados visíveis em poucos dias.
             </p>
-            <a href="#" class="button text-center inline-block mb-4 md:mb-6"
+            <a href="#ritual" class="button text-center inline-block mb-4 md:mb-6"
               >GARANTIR OFERTA</a
             >
 
@@ -3396,7 +3398,7 @@
                   dias. Sua beleza, reativada naturalmente com a potência do HSN
                   Complex™.
                 </p>
-                <a href="#" class="button !w-full text-center"
+                <a href="#ritual" class="button !w-full text-center"
                   >GARANTIR OFERTA</a
                 >
               </div>
